--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
-	"enabledApiProposals": ["inlineCompletionsAdditions"],
+	"enabledApiProposals": [
+		"inlineCompletionsAdditions"
+	],
 	"name": "completion-code",
 	"displayName": "completion-code",
 	"description": "コードを補完します",
@@ -9,8 +11,12 @@
 	},
 	"icon": "logo.png",
 	"publisher": "tochiji",
-	"categories": ["Other"],
-	"activationEvents": ["onStartupFinished"],
+	"categories": [
+		"Other"
+	],
+	"activationEvents": [
+		"onStartupFinished"
+	],
 	"main": "./out/extension.js",
 	"contributes": {
 		"configuration": {
@@ -115,6 +121,7 @@
 	},
 	"dependencies": {
 		"@anthropic-ai/sdk": "^0.20.8",
+		"@google/generative-ai": "^0.11.4",
 		"openai": "^4.41.0"
 	}
 }
